--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Hexashop - About Page</title>
+    <title>Biz haqimizda</title>
 
 
     <!-- Additional CSS Files -->
@@ -58,29 +58,29 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Men's</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Women's</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Kid's</a></li>
+                            <li class="scroll-to-section"><a href="index.html" class="active">Asosiy sahifa</a></li>
+                            <li class="scroll-to-section"><a href="index.html">Erkaklar kiyimi</a></li>
+                            <li class="scroll-to-section"><a href="index.html">Ayollar kiyimi</a></li>
+                            <li class="scroll-to-section"><a href="index.html">Bolalar kiyimi</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Pages</a>
+                                <a href="javascript:;">Sahifalar</a>
                                 <ul>
-                                    <li><a href="{% url 'about' %}">About Us</a></li>
-                                    <li><a href="{% url 'products' %}">Products</a></li>
-                                    <li><a href="{% url 'single-product' %}">Single Product</a></li>
-                                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                                    <li><a href="{% url 'about' %}">Biz haqimizda</a></li>
+                                    <li><a href="{% url 'products' %}">Mahsulotlar</a></li>
+                                    <li><a href="{% url 'single-product' %}">Yagona xaridlar</a></li>
+                                    <li><a href="{% url 'contact' %}">Aloqaga chiqish</a></li>
                                 </ul>
                             </li>
                             <li class="submenu">
-                                <a href="javascript:;">Features</a>
+                                <a href="javascript:;">Xususiyatlar:</a>
                                 <ul>
-                                    <li><a href="#">Features Page 1</a></li>
-                                    <li><a href="#">Features Page 2</a></li>
-                                    <li><a href="#">Features Page 3</a></li>
-                                    <li><a rel="nofollow" href="https://templatemo.com/page/4" target="_blank">Template Page 4</a></li>
+                                    <li><a href="#">Xususiyatlar 1</a></li>
+                                    <li><a href="#">Xususiyatlar 2</a></li>
+                                    <li><a href="#">Xususiyatlar 3</a></li>
+                                    <li><a rel="nofollow" href="https://templatemo.com/page/4" target="_blank">Sahifa 4</a></li>
                                 </ul>
                             </li>
-                            <li class="scroll-to-section"><a href="{% url 'index' %}">Explore</a></li>
+                            <li class="scroll-to-section"><a href="{% url 'index' %}">Ko'proq ko'rish</a></li>
                         </ul>        
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -124,7 +124,6 @@ https://templatemo.com/tm-571-hexashop
                         <div class="quote">
                             <i class="fa fa-quote-left"></i><p>'Adidas' Germany Branch, 'Nike' US Branch, 'Louis Vuitten' France Branch, 'GUCCI' Italy Branch, 'Chanel' French Branch</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -144,8 +143,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Amazing Team</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Bizning Ajoyib Guruhimiz:</h2>
+                        <span>Rahimboy -- Guruh Boshi <br> Ulugbek -- modelllarga javobgar<br> Asadbek -- Veiwsga javobgar <br> Behruz -- templatega javobgar <br> Asilbek -- aboutga javobgar <br> Farux -- contactga javobgar</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -154,18 +153,17 @@ https://templatemo.com/tm-571-hexashop
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                        <li><a href="https://www.facebook.com/facebook/"><"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <img src="{% static 'assets/images/team-member-01.jpg'%}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
+                            <h4>Amirxon Toirov</h4>
+                            <span>Manager </span>
                         </div>
                     </div>
                 </div>
@@ -175,18 +173,17 @@ https://templatemo.com/tm-571-hexashop
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                        <li><a href="https://www.facebook.com/facebook/"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <img src="{% static 'assets/images/team-member-02.jpg'%}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
+                            <h4>Asror Alisherov</h4>
+                            <span>Katta Sotuvchi</span>
                         </div>
                     </div>
                 </div>
@@ -196,18 +193,17 @@ https://templatemo.com/tm-571-hexashop
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                        <li><a href="https://www.facebook.com/facebook/"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <img src="{% static 'assets/images/team-member-03.jpg'%}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
+                            <h4>Jovlon Shodmonov</h4>
+                            <span>Manager O'rinbosari</span>
                         </div>
                     </div>
                 </div>
@@ -222,28 +218,28 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Services</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Bizning xizmatlarimiz</h2>
+                        <span>Butun jahon boylab yetqazib berish.</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Synther Vaporware</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>O'zbekistan Feliali</h4>
+                        <p>Viloyatlar aro bepul yetqazib berish.</p>
                         <img src="{% static 'assets/images/service-01.jpg'%}" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Locavore Squidward</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>Fransiya Feliali</h4>
+                        <p>Har doim o'zgarib boruvchi chegirma va bonuslar.</p>
                         <img src="{% static 'assets/images/service-02.jpg'%}" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Health Gothfam</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>Kiyimlar Sifati</h4>
+                        <p>Jahon Ekologiyasi tomonidan berilgan xavfsizlik sertifikati.</p>
                         <img src="{% static 'assets/images/service-03.jpg'%}" alt="">
                     </div>
                 </div>
@@ -258,8 +254,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-heading">
-                        <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Bizning ijtimoiy kanallarimizga obuna bo'sanggiz 15% chegirmasi bor</h2>
+                        <span>Biz o'z saytlarimizda chegirmalar, bonuslar haqida e'lon berib boramiz.</span>
                     </div>
                     <form id="subscribe" action="" method="get">
                         <div class="row">
@@ -285,16 +281,16 @@ https://templatemo.com/tm-571-hexashop
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>Sunny Isles Beach, FL 33160, United States</span></li>
-                                <li>Phone:<br><span>010-020-0340</span></li>
-                                <li>Office Location:<br><span>North Miami Beach</span></li>
+                                <li>Manzil:<br><span>Toshkent, Abdulla Qodiriy metro, Ardus</span></li>
+                                <li>Tel:<br><span>+998 97 7077707</span></li>
+                                <li>Office Manzili:<br><span>Oreint Bussiness Center</span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>07:30 AM - 9:30 PM Daily</span></li>
-                                <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
+                                <li>Ish vaqti:<br><span>07:30 - 21:30 Har kuni</span></li>
+                                <li>Email:<br><span>Shoppinginfo@gmail.com</span></li>
+                                <li>Ijtimoiy saytlarimiz:<br><span><a href="https://www.facebook.com/facebook/">Facebook</a>, <a href="https://www.instagram.com/instagram/?hl=en">Instagram</a>, <a href="https://www.linkedin.com/jobs">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
@@ -311,7 +307,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <div class="first-item">
                         <div class="logo">
-                            <img src="assets/images/white-logo.png" alt="hexashop ecommerce templatemo">
+                            <img src="{% static'assets/images/white-logo.png'%}" alt="hexashop ecommerce templatemo">
                         </div>
                         <ul>
                             <li><a href="#">16501 Collins Ave, Sunny Isles Beach, FL 33160, United States</a></li>
@@ -323,39 +319,38 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <h4>Shopping &amp; Categories</h4>
                     <ul>
-                        <li><a href="#">Men’s Shopping</a></li>
-                        <li><a href="#">Women’s Shopping</a></li>
-                        <li><a href="#">Kid's Shopping</a></li>
+                        <li><a href="#">Erkaklar kiyimi</a></li>
+                        <li><a href="#">Ayollar kiymi</a></li>
+                        <li><a href="#">Bolalar kiyimi</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><a href="#">Homepage</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Asosiy sahifa</a></li>
+                        <li><a href="#">Biz haqimizda</a></li>
+                        <li><a href="#">Yordam</a></li>
+                        <li><a href="#">Aloqaga chiqish</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h4>Help &amp; Information</h4>
+                    <h4>Yordam &amp; Informatsiya</h4>
                     <ul>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Yordam</a></li>
                         <li><a href="#">FAQ's</a></li>
-                        <li><a href="#">Shipping</a></li>
-                        <li><a href="#">Tracking ID</a></li>
+                        <li><a href="#">Yetqazib berish</a></li>
+                        <li><a href="#">Furalar bilan yetqazib berish</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-12">
                     <div class="under-footer">
-                        <p>Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved. 
+                        <p>Tashkil etilgan 2023 yil.
                         
-                        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+                        <br>Dizayner: <a href="https://templatemo.com" target="_parent" title="free css templates">Abdulloh</a></p>
                         <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                            <li><a href="https://www.facebook.com/facebook/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -365,11 +360,11 @@ https://templatemo.com/tm-571-hexashop
     
 
     <!-- jQuery -->
-    <script src="assets/js/jquery-2.1.0.min.js"></script>
+    <script src="{% static 'assets/js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'assets/js/popper.js'%}"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js'%}"></script>
 
     <!-- Plugins -->
     <script src="{% static 'assets/js/owl-carousel.js'%}"></script>
