--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -9,8 +9,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="inner-content">
-                        <h2>About Our Company</h2>
-                        <span>Awesome, clean &amp; creative HTML5 Template</span>
+                        <h2>Kompaniya haqida</h2>
+                        <span>Mahsulotlarni o'z egasiga tez va yaxshi holatda olib borish. Hamma mahsulotlarimiz sifatli va hamyonbop.</span>
                     </div>
                 </div>
             </div>
@@ -24,21 +24,20 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="left-image">
-                        <img src="assets/images/about-left-image.jpg" alt="">
+                        <img src="{% static 'assets/images/about-left-image.jpg'%}" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="right-content">
-                        <h4>About Us &amp; Our Skills</h4>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore.</span>
+                        <h4>Bizning hamkorlarimiz</h4>
+                        <span> Louis Vuitton, ZARA, H&M, Hermes, Gucci, Chanel, Burberry, Prada, Fendi, Armani, Puma, Dior  </span>
                         <div class="quote">
-                            <i class="fa fa-quote-left"></i><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod kon tempor incididunt ut labore.</p>
+                            <i class="fa fa-quote-left"></i><p>Barcha mahsulotlar narxlarini oz ijtimoiy sayitlarimizda ham ko'rishingiz mumkin.</p>
                         </div>
                         <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                            <li><a href="https://www.facebook.com/facebook/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -54,7 +53,7 @@
                 <div class="col-lg-12">
                     <div class="section-heading">
                         <h2>Bizning Ajoyib Guruhimiz:</h2>
-                        <span>Rahimboy -- Guruh Boshi <br> Ulugbek -- modelllarga javobgar<br> Asadbek -- Veiwsga javobgar <br> Behruz -- templatega javobgar <br> Asilbek -- aboutga javobgar <br> Farux -- contactga javobgar</span>
+                        <span>Rahimboy -- Guruh Boshi <br> Ulugbek -- Modelllarga javobgar<br> Asadbek -- Veiwsga javobgar <br> Behruz -- Templatega javobgar <br> Asilbek -- Aboutga javobgar <br> Farux -- Contactga javobgar</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -129,27 +128,27 @@
                 <div class="col-lg-12">
                     <div class="section-heading">
                         <h2>Bizning xizmatlarimiz</h2>
-                        <span>Butun jahon boylab yetqazib berish.</span>
+                        <span>Butun jahon bo'ylab yetqazib berish.</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Synther Vaporware</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>O'zbekistondagi Felial</h4>
+                        <p>O'zbekiston bo'ylab bepul yetqazib berish.</p>
                         <img src="{% static 'assets/images/service-01.jpg'%}" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Locavore Squidward</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>Fransiyadagi Filial</h4>
+                        <p>Har kun o'zgarib boruvchi chegirma va bonuslar.</p>
                         <img src="{% static 'assets/images/service-02.jpg'%}" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Health Gothfam</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>Ekologik Mahsulot</h4>
+                        <p>Jahon Ekologiyasidan berilgan yuqori sifat sertifikati.</p>
                         <img src="{% static 'assets/images/service-03.jpg'%}" alt="">
                     </div>
                 </div>
