--- a/templates/base.html
+++ b/templates/base.html
@@ -59,9 +59,9 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#men">Men's</a></li>
-                            <li class="scroll-to-section"><a href="#women">Women's</a></li>
-                            <li class="scroll-to-section"><a href="#kids">Kid's</a></li>
+                            {% for x in ctg %}
+                              <li class="scroll-to-section"><a href="#men">{{x.name}}</a></li>
+                            {% endfor %}
                             <li class="submenu">
                                 <a href="javascript:;">Pages</a>
                                 <ul>
