--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -62,13 +62,13 @@
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="https://www.facebook.com/facebook/"><"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.facebook.com/facebook/"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="https://about.twitter.com/en"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="https://www.linkedin.com/jobs"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
-                            <img src="assets/images/team-member-01.jpg">
+                            <img src="{% static 'assets/images/team-member-01.jpg' %}">
                         </div>
                         <div class="down-content">
                             <h4>Amirxon Toirov</h4>
@@ -88,7 +88,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <img src="assets/images/team-member-02.jpg">
+                            <img src="{% static 'assets/images/team-member-02.jpg' %}">
                         </div>
                         <div class="down-content">
                             <h4>Asror Alisherov</h4>
@@ -108,7 +108,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <img src="assets/images/team-member-03.jpg">
+                            <img src="{% static 'assets/images/team-member-03.jpg' %}">
                         </div>
                         <div class="down-content">
                             <h4>Jovlon Shodmonov</h4>
