index da rasmni uchirdim

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -21,7 +21,7 @@
                                     <a href="#">Purchase Now!</a>
                                 </div>
                             </div>
-                            <img src="{% static 'assets/images/left-banner-image.jpg' %}" alt="">
+                            <img src="{% static 'assets/images/.jpg' %}" alt="">
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <img src="{% static 'assets/images/baner-right-image-01.jpg' %}">
+                                        <img src="{% static 'assets/images/.jpg' %}">
                                     </div>
                                 </div>
                             </div>
